<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.act.RecordMoreActivity">

    <com.liu.bloodpressure.ui.view.TitleView
        android:id="@+id/record_more_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftImageVisible="visible"
        app:middleText="@string/record_more"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/record_more_rv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/record_more_title" />

    <LinearLayout
        android:id="@+id/record_more_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="111dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/record_more_title">

        <ImageView
            android:layout_width="168dp"
            android:layout_height="168dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_more_no"
            android:textColor="@color/color_24"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/record_more_to_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_more_to"
            android:textColor="@color/main_color"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>